# Fingerprint

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  affichageOptimization.py  fingerprint  makefile
demo/: CMakeLists.txt  blur_demo.cpp  convolution_demo.cpp  demo_time_convolution.cpp  dft_convolution_demo.cpp  dtf_convolution_demo.cpp  fingerprint.cpp  gaussian_blur.cpp  image_demo.cpp  main.cpp  optimization_demo.cpp  optimization_rtxy_demo.cpp  optimization_tx_demo.cpp  optimization_txy_demo.cpp  pressure_demo.cpp  rotation_comp_demo.cpp  rotation_demo.cpp  warp_demo.cpp
html/: _r_e_a_d_m_e_8md.html  annotated.html  blur__demo_8cpp.html  blur__demo_8cpp__incl.map  blur__demo_8cpp__incl.md5  class_image-members.html  class_image.html  class_pixel-members.html  class_pixel.html  classes.html  convolution__demo_8cpp.html  convolution__demo_8cpp__incl.map  convolution__demo_8cpp__incl.md5  demo__time__convolution_8cpp.html  demo__time__convolution_8cpp__incl.map  demo__time__convolution_8cpp__incl.md5  dft_8cpp.html  dft_8cpp__incl.map  dft_8cpp__incl.md5  dft__convolution__demo_8cpp.html  dft__convolution__demo_8cpp__incl.map  dft__convolution__demo_8cpp__incl.md5  dir_000000_000001.html  dir_000002_000001.html  dir_000003_000001.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_b6c2a257bfab6380ca9b3cb94b12cb25.html  dir_b6c2a257bfab6380ca9b3cb94b12cb25_dep.map  dir_b6c2a257bfab6380ca9b3cb94b12cb25_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  (+96 more)
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  (+2 more)
inc/: image.hpp  linear_filter.hpp  maths_tools.hpp  optimization.hpp  pixel.hpp  point.hpp  pressure.hpp  test_image.hpp  test_point.hpp  test_pressure.hpp  tests.hpp
latex/: annotated.tex  blur__demo_8cpp.tex  blur__demo_8cpp__incl.md5  class_image.tex  class_pixel.tex  convolution__demo_8cpp.tex  convolution__demo_8cpp__incl.md5  demo__time__convolution_8cpp.tex  demo__time__convolution_8cpp__incl.md5  dft_8cpp.tex  dft_8cpp__incl.md5  dft__convolution__demo_8cpp.tex  dft__convolution__demo_8cpp__incl.md5  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b6c2a257bfab6380ca9b3cb94b12cb25.tex  dir_bfccd401955b95cf8c75461437045ac0.tex  files.tex  image_8cpp.tex  image_8cpp__incl.md5  image_8hpp.tex  image_8hpp__dep__incl.md5  image_8hpp__incl.md5  image__demo_8cpp.tex  image__demo_8cpp__incl.md5  linear__filter_8cpp.tex  linear__filter_8cpp__incl.md5  linear__filter_8hpp.tex  linear__filter_8hpp__dep__incl.md5  linear__filter_8hpp__incl.md5  maths__tools_8cpp.tex  maths__tools_8cpp__incl.md5  maths__tools_8hpp.tex  maths__tools_8hpp__dep__incl.md5  md__r_e_a_d_m_e.tex  optimization_8cpp.tex  optimization_8cpp__incl.md5  optimization_8hpp.tex  optimization_8hpp__dep__incl.md5  (+36 more)
src/: CMakeLists.txt  dft.cpp  elasticity.cpp  image.cpp  linear_filter.cpp  main  main.cpp  maths_tools.cpp  optimization.cpp  pixel.cpp  point.cpp  pressure.cpp  rotation.cpp  test_image.cpp  test_point.cpp  test_pressure.cpp  tests.cpp  translation.cpp  warpping.cpp
tests/: CMakeLists.txt  test_optimization.cxx  test_rotation.cxx
