add_executable(image_demo image_demo.cpp)
add_executable(pressure_demo pressure_demo.cpp)
add_executable(rotation_demo rotation_demo.cpp)
add_executable(warp_demo warp_demo.cpp)
add_executable(convolution_demo convolution_demo.cpp)
add_executable(optimization_demo optimization_demo.cpp)
target_link_libraries(image_demo ${OpenCV_LIBRARIES} ${Eigen3_LIBS} fingerprint)
target_link_libraries(pressure_demo ${OpenCV_LIBRARIES} ${Eigen3_LIBS} fingerprint)
target_link_libraries(rotation_demo ${OpenCV_LIBRARIES} ${Eigen3_LIBS} fingerprint)
target_link_libraries(warp_demo ${OpenCV_LIBRARIES} ${Eigen3_LIBS} fingerprint)
target_link_libraries(convolution_demo ${OpenCV_LIBRARIES} ${Eigen3_LIBS} fingerprint)
target_link_libraries(optimization_demo ${OpenCV_LIBRARIES} ${Eigen3_LIBS} fingerprint)
